ros_workspace/log/build_2020-12-02_06-21-58/ralph_py/stdout_stderr.log
running egg_info
writing ../../build/ralph_py/ralph_py.egg-info/PKG-INFO
writing dependency_links to ../../build/ralph_py/ralph_py.egg-info/dependency_links.txt
writing entry points to ../../build/ralph_py/ralph_py.egg-info/entry_points.txt
writing requirements to ../../build/ralph_py/ralph_py.egg-info/requires.txt
writing top-level names to ../../build/ralph_py/ralph_py.egg-info/top_level.txt
reading manifest file '../../build/ralph_py/ralph_py.egg-info/SOURCES.txt'
writing manifest file '../../build/ralph_py/ralph_py.egg-info/SOURCES.txt'
running build
running build_py
copying ralph_py/ralph.py -> /home/propp/Independent_Study/ros_workspace/build/ralph_py/build/lib/ralph_py
running install
running install_lib
copying /home/propp/Independent_Study/ros_workspace/build/ralph_py/build/lib/ralph_py/ralph.py -> /home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py
byte-compiling /home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py to ralph.cpython-38.pyc
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 48
    for i in range(len(current)+len(self.reference_scanline))
                                                            ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/ralph_py/ralph_py.egg-info to /home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py-0.0.0-py3.8.egg-info
running install_scripts
Installing ralph_node script to /home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/ralph_py
writing list of installed files to '/home/propp/Independent_Study/ros_workspace/build/ralph_py/install.log'
